Done with bronze and added panel to gold!

--- a/Shuqair_Nazir_Project4/Gold/index.html
+++ b/Shuqair_Nazir_Project4/Gold/index.html
@@ -25,8 +25,19 @@
 
 <body>
     <div data-role="page" id="home" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home" class="ui-btn-active" ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info"><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline"/>
+            <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
         </div>
         <div data-role="content">
             <!--Link for additem page, CTA-->
@@ -64,24 +75,23 @@
                 </li>
             </ul>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home" class="ui-btn-active" >Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="about" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" class="ui-btn-active"><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
            <div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
            <h1>About</h1>
         </div>
         <div data-role="content">
@@ -111,24 +121,23 @@
                 </div>
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info" class="ui-btn-active">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="current" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" ><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh" class="ui-btn-active"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png"  class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
             <h1>Most Current</h1>
         </div>
         <div data-role="content" data-content-theme="a">
@@ -160,24 +169,23 @@
                 </li>
             </ul>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh" class="ui-btn-active">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="usVid" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" ><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png"  class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
             <h1>USAMTIC Video Bridge</h1>
         </div>
         <div data-role="content">
@@ -190,24 +198,23 @@
                 </div>
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="tmVid" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" ><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png"  class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
             <h1>USAMTIC Video Bridge</h1>
         </div>
         <div data-role="content" data-theme="a">
@@ -220,24 +227,23 @@
                 </div>
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="usAud" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" ><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png"  class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
             <h1>USAMTIC Video Bridge</h1>
         </div>
         <div data-role="content" data-theme="a">
@@ -250,24 +256,23 @@
                 </div>
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="tmAud" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" ><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
             <h1>USAMTIC Video Bridge</h1>
         </div>
         <div data-role="content" data-theme="a">
@@ -280,24 +285,23 @@
                 </div>
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </div>
     <div data-role="page" id="additem" data-add-back-btn="true" data-theme="a">
+    	<div data-role="panel" id="mypanel" data-position="left" data-position-fixed="true" data-theme="d">
+        	<ul data-role="listview" data-inset="false" data-theme="d">
+                    <li><a href="#home" data-icon="home"  ><h3 style="text-align:center">Home</h3></a>
+                    </li>
+                    <li><a href="#about" data-icon="info" ><h3 style="text-align:center">About</h3></a>
+                    </li>
+                    <li><a href="#current" data-icon="refresh"><h3 style="text-align:center">Most Current</h3></a>
+                    </li>
+                 </ul>
+        </div>
         <div data-role="header" data-theme="a">
         	<div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline"/>
            </div>
+           <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
             <h1>VTC Line-Up</h1>
             <div style="text-align:right; font-size:10px; color:#666; font-family:Helvetica,Arial,sans-serif">
     			<p>Fields with * are required</p>
@@ -375,18 +379,6 @@
                 <input type="reset" data-inline="true" value="reset" data-theme="a" data-mini="true" id="resetBtn" />
 
             </form>
-        </div>
-        <div data-role="footer" data-position="fixed" data-theme="a" data-id="main">
-            <div data-role="navbar" data-theme="a">
-                <ul>
-                    <li><a href="#home" data-icon="home">Home</a>
-                    </li>
-                    <li><a href="#about" data-icon="info">About</a>
-                    </li>
-                    <li><a href="#current" data-icon="refresh">Most Current</a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </div>
 
