--- a/Shuqair_Nazir_Project4/Bronze/index.html
+++ b/Shuqair_Nazir_Project4/Bronze/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/finalTheme.css" />
     <script src="js/libs/modernizr.custom.min.js"></script>
     <title>VTC Line Up</title>
 </head>
@@ -23,27 +24,41 @@
 <body>
 
     <div data-role="page" id="home">
-        <div data-role="header" data-theme="e">
-            <h1>VTC</h1>
+        <div data-role="header" data-theme="b">
+            <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline"/>
         </div>
-        <div data-role="content">
+        <div data-role="content" data-theme="b">
 
             <!--Link for additem page, CTA-->
             <a href="additem.html" data-ajax="false">
-                <img src="img/CTA.gif" id="mainButton">
+                <img src="img/CTA.gif" id="mainButton" width="100%">
             </a>
 
             <div data-role="listview" data-role="collapsible-set" data-filter="true">
-                <li data-role="none"></li>
+                <li data-role="list-divider">Search Most Current!</li>
+                <div data-role="content" data-content-theme="b">
+            <ul data-role="listview" data-inset="false" data-filter="true" data-theme="b">
+                <li>
+                    <h2>COS Reocurring</h2>
+                    <p class="currentC">Meeting Time: 06:30 -- VIP PRESENT</p>
+                    <p class="currentN">Call code: 56322# -- Notes: User needs special software</p>
+                </li>
+                <li>
+                    <h2>Holiday Party</h2>
+                    <p class="currentC">Meeting Time: 09:30 -- VIP PRESENT</p>
+                    <p class="currentN">Call code: 76544#</p>
+                </li>
+            </ul>
+        </div>
                 <li data-role="list-divider">Browse</li>
                 <li data-role="list-divider">Video</li>
-                <div data-role="collapsible" data-collapsed="true" data-theme="a">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <img src="img/USAMTIC.gif" />
                     <h3>USAMTIC Video</h3>
-                    <div data-role="content">
+                    <div data-role="content" data-theme="b">
                         <p>USAMTIC is a bridge managed by the army providing top tier secure/unsecure video teleconferencing</p>
                         <div data-role="collapsible-set">
-                            <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                            <div data-role="collapsible" data-collapsed="true" data-theme="b">
                                 <h3>Schedule a Call</h3>
                                 <div data-role="button"><a href="additem.html" data-ajax="false">USAMTIC Video</a>
                                 </div>
@@ -51,13 +66,13 @@
                         </div>
                     </div>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="a">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <img src="img/tms.gif" />
                     <h3>TMS Video</h3>
-                    <div data-role="content">
+                    <div data-role="content" data-theme="b">
                         <p>TMS is a Cisco teleconferencing system approved for use within the DoD</p>
                         <div data-role="collapsible-set">
-                            <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                            <div data-role="collapsible" data-collapsed="true" data-theme="b">
                                 <h3>Schedule a Call</h3>
                                 <div data-role="button"><a href="additem.html" data-ajax="false">TMS Video</a>
                                 </div>
@@ -66,13 +81,13 @@
                     </div>
                 </div>
                 <li data-role="list-divider">Audio</li>
-                <div data-role="collapsible" data-collapsed="true" data-theme="a">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <img src="img/USAMTIC.gif" />
                     <h3>USAMTIC Audio</h3>
-                    <div data-role="content">
+                    <div data-role="content" data-theme="b">
                         <p>USAMTIC is a bridge managed by the army providing top tier secure/unsecure audio teleconferencing</p>
                         <div data-role="collapsible-set">
-                            <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                            <div data-role="collapsible" data-collapsed="true" data-theme="b">
                                 <h3>Schedule a Call</h3>
                                 <div data-role="button"><a href="additem.html" data-ajax="false">USAMTIC Audio</a>
                                 </div>
@@ -80,13 +95,13 @@
                         </div>
                     </div>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="a">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <img src="img/tms.gif" />
                     <h3>TMS Audio</h3>
-                    <div data-role="content">
+                    <div data-role="content" data-theme="b">
                         <p>TMS is a Cisco teleconferencing system approved for use within the DoD</p>
                         <div data-role="collapsible-set">
-                            <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                            <div data-role="collapsible" data-collapsed="true" data-theme="b">
                                 <h3>Schedule a Call</h3>
                                 <div data-role="button"><a href="additem.html" data-ajax="false">TMS Audio</a>
                                 </div>
@@ -97,7 +112,7 @@
 
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="e" data-id="main">
+        <div data-role="footer" data-position="fixed" data-theme="b" data-id="main">
             <div data-role="navbar">
                 <ul>
                     <li><a href="#home" data-icon="home" class="ui-btn-active">Home</a>
@@ -112,36 +127,39 @@
     </div>
 
     <div data-role="page" id="about" data-add-back-btn="true">
-        <div data-role="header" data-theme="e">
+        <div data-role="header" data-theme="b">
+        	<div class="logo1" onclick="window.location.href='#home'">
+                <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline"/>
+           	</div>
             <h1>About</h1>
         </div>
-        <div data-role="content">
+        <div data-role="content" data-theme="b">
             <div data-role="collapsible-set" data-filter="true">
-                <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <h3>Home</h3>
                     <a href="index.html">Back to Home!</a>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <h3>GIT</h3>
                     <a href="https://github.com/g67277/MiU.git">https://github.com/g67277/MiU.git</a>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <h3>Apps Links</h3>
                     <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project2/Gold">Gold Link</a>
                     </div>
                     <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project2/Bronze">Bronze Link</a>
                     </div>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <h3>Development</h3>
                     <p>Future development will include targeting and displaying specific meetings when selecting one of the categories</p>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <h3>About Me</h3>
                     <p>Nazir Shuqair</p>
                     <p>22 years old, Work as a Desktop Support Specialiest with the navy while attending FullSail. Loving MiU!!</p>
                 </div>
-                <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                <div data-role="collapsible" data-collapsed="true" data-theme="b">
                     <h3>VTC Systems</h3>
                     <div class="ui-grid-a">
                         <div class="ui-block-a">
@@ -173,7 +191,7 @@
                 </div>
             </div>
         </div>
-        <div data-role="footer" data-position="fixed" data-theme="e" data-id="main">
+        <div data-role="footer" data-position="fixed" data-theme="b" data-id="main">
             <div data-role="navbar">
                 <ul>
                     <li><a href="#home" data-icon="home">Home</a>
