--- a/Shuqair_Nazir_Project4/Gold/index.html
+++ b/Shuqair_Nazir_Project4/Gold/index.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </div>
-        <div data-role="header" data-theme="a">
+        <div data-role="header" data-theme="a" data-position="fixed">
             <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline" />
             <a href="#mypanel" data-role="button" data-icon="bars" data-iconpos="notext" data-theme="a" data-inline="true"></a>
         </div>
@@ -87,7 +87,7 @@
                 </li>
             </ul>
         </div>
-        <div data-role="header" data-theme="a">
+        <div data-role="header" data-theme="a" data-position="fixed">
             <div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline" />
             </div>
@@ -137,7 +137,7 @@
                 </li>
             </ul>
         </div>
-        <div data-role="header" data-theme="a">
+        <div data-role="header" data-theme="a" data-position="fixed">
             <div class="logo1" onclick="window.location.href='#home'">
                 <img border="0" src="img/brand-logo.png" class="logo" style="float:none;display:inline" />
             </div>
